@@ -1283,5 +1283,8 @@ ConfigView.group.override=Override Options
 ConfigView.connection.group.proxy=Proxy Options
 SelectorGuard.repairmessage=If you get this message repeatedly, and you are sure there is nothing wrong with your\nnetwork setup, and you are running java 1.4 series, then you have likely encountered\na JRE bug, and should upgrade to the newer java 1.5 (5.0) series.
 ConfigView.section.file.perf.cache.notsmallerthan=Do not cache files smaller than this (in %1)
+PeersView.menu.blockupload=Block Upload
+PeersView.menu.kickandban=Kick and Ban
+PeersView.menu.kickandban.reason=Peer manually banned
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
